# Code_test

./: README.md
imu_test/: complimentary_imu.py  data_csv.py  imu.py  imu_infor1.csv  kalman_imu.py  tag.csv
parallel_manipulator/: cir_plo.py  plot_trajcory.py
parreal/: func.py  plot_j.py  plot_trajcory.py  plot_w.py  te_code.py
python_base/: Input_print.py  func.py  imu_pre.py  图像批量处理形状.py  图片命名.py  图片批量命名.py
slambook2_test/ch03/: coordinate.cpp  eigenMatrix.cpp  helloslam.cpp  imagebasics.cpp  libhelloslam.cpp  libhelloslam.h  plotTrajectory.cpp  useGeometry.cpp  usehello.cpp
slambook2_test/ch05/: CMakeLists.txt  imagebasics.cpp
